<resources>
  <string name="app_name">Fantasy Football Stats</string>
  <string name="title_activity_main">MainActivity</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>
  <string name="login_failure_message">Unable to login with provided credentials.</string>
  <string name="sign_out">Sign out</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="jersey">Jersey:</string>
  <string name="name">Name:</string>
  <string name="separator">,</string>
  <string name="position">Position:</string>
  <string name="college">College:</string>
  <string name="details_title">Player Details</string>
  <string name="okay">Okay</string>
</resources>