<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_height="wrap_content"
  android:layout_width="match_parent">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".controller.PlayerInfoFragment">

    <TextView
      android:id="@+id/jersey_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/jersey"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>

    <TextView
      android:id="@+id/jersey"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toEndOf="@id/label_barrier"
      app:layout_constraintTop_toTopOf="parent"/>

    <TextView
      android:id="@+id/name_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/name"
      app:layout_constraintTop_toBottomOf="@+id/jersey"
      app:layout_constraintStart_toStartOf="parent"/>


    <TextView
      android:id="@+id/last_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/jersey"
      app:layout_constraintStart_toEndOf="@id/label_barrier"/>

    <TextView
      android:id="@+id/name_separator"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/separator"
      app:layout_constraintTop_toBottomOf="@id/jersey"
      app:layout_constraintStart_toEndOf="@id/last_name"/>


    <TextView
      android:id="@+id/first_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/jersey"
      app:layout_constraintStart_toEndOf="@id/name_separator"/>

    <TextView
      android:id="@+id/position_label"
      android:layout_width="wrap_content"
      android:text="@string/position"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/first_name"
      app:layout_constraintStart_toStartOf="parent"/>

    <TextView
      android:id="@+id/position"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/first_name"
      app:layout_constraintStart_toEndOf="@id/label_barrier"/>

    <TextView
      android:id="@+id/college_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/college"
      app:layout_constraintTop_toBottomOf="@id/position"
      app:layout_constraintStart_toStartOf="parent"/>

    <TextView
      android:id="@+id/college"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/position"
      app:layout_constraintStart_toStartOf="@id/label_barrier"/>

    <androidx.constraintlayout.widget.Barrier
      android:id="@+id/label_barrier"
      app:barrierDirection="end"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:constraint_referenced_ids="jersey_label, name_label, college_label, position_label"
      />

  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>